normalize environment
